--- a/index.html
+++ b/index.html
@@ -57,46 +57,59 @@
       <div class="news-title">НОВИНКИ</div>
       <div class="card-container">
         <div class="film-card">
-          <div class="card-wrapper">
-            <p class="rating-label gradient">8,8</p>
-            <img class="cover-image" src="src/images/film-1.png" />
-            <p class="film-card-title">СИНИЙ ЖУК</p>
-          </div>
-        </div>
-        <div class="film-card">
-          <p class="rating-label gradient">7,0</p>
-          <img class="cover-image" src="src/images/film-2.png" />
-          <div class="film-card-title">Домашняя Игра</div>
+          <p class="rating-label gradient">10</p>
+          <img class="cover-image" src="src/images/film-1.png" />
+          <p class="film-card-title">Синий жук</p>
         </div>
         <div class="film-card">
           <p class="rating-label gradient">5,2</p>
           <img class="cover-image" src="src/images/film-3.png" />
-          <div class="film-card-title">СИНИЙ ЖУК</div>
+          <div class="film-card-title">Домашняя игра</div>
+        </div>
+        <div class="film-card">
+          <p class="rating-label gradient">5,2</p>
+          <img class="cover-image" src="src/images/film-3.png" />
+          <div class="film-card-title">Домашняя игра</div>
         </div>
         <div class="film-card">
           <div class="rating-label gradient">2,4</div>
-          <!-- <img class="cover-image" src="src/images/film-4.png" /> -->
-          <div class="film-card-title">СИНИЙ ЖУК</div>
+          <img class="cover-image" src="src/images/film-4.png" />
+          <div class="film-card-title">Салют 7</div>
+        </div>
+        <div class="film-card">
+          <p class="rating-label gradient">7,0</p>
+          <img class="cover-image" src="src/images/film-2.png" />
+          <div class="film-card-title">Поймай меня, если сможешь</div>
         </div>
       </div>
     </div>
     
     <div class="rating-carousel">
-      <div class="rating-title">TOP-10 просмотров</div>
+      <span class="news-title" data-item="ТОП-10">просмотров за неделю</span>
       <div class="card-container">
-        <div class="rating-card">
-          <div class="film-card" data-item="1">
+        <div class="range-card"  data-item="1">
+          <div class="film-card">
             <img class="cover-image" src="src/images/range-1.png" />
           </div>
         </div>
-        <div class="range-card">
-          <div class="film-card" data-item="2">
+        <div class="range-card" data-item="2">
+          <div class="film-card" >
             <img class="cover-image" src="src/images/range-2.png" />
           </div>
         </div>
-        <div class="range-card">
-          <div class="film-card" data-item="3">
-            <img class="cover-image" src="src/images/range-3.png" />
+        <div class="range-card" data-item="3">
+          <div class="film-card">
+            <img class="cover-image" src="src/images/film-3.png" />
+          </div>
+        </div>
+        <div class="range-card" data-item="4">
+          <div class="film-card">
+            <img class="cover-image" src="src/images/film-3.png" />
+          </div>
+        </div>
+        <div class="range-card" data-item="4">
+          <div class="film-card">
+            <img class="cover-image" src="src/images/film-3.png" />
           </div>
         </div>
       </div>
