--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/main.css">
   <title>TVOE TEST</title>
 </head>
 <body>
@@ -47,8 +47,8 @@
           Неувядающий авантюрист и пытливый археолог-исследователь по‑прежнему в седле.
         </p>
         <div class="hero-buttons">
-          <button class="gradient">Смотреть</button>
-          <button class="button-secondary">О фильме</button>
+          <button class="button gradient">Смотреть</button>
+          <button class="button button-secondary">О фильме</button>
       </div>
     </div>
   </div>
